src/objects/Project_Details__c.object
<CustomObject>
    <description>This object is used to capture different types of Provider Claims under Case.</description>
    <fields>
        <fullName>Adjust_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Adjusted Claims</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aged_overpayment_tracking_EnI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Aged overpayment tracking (E&amp;I)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPM Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provider_Claims1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPM_Project_Closure_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPM Project Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Project_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPM Project Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPM_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPM Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPTT_CRT_Return__c</fullName>
        <label>PICT/CRT Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Claim Adjusted to Project Start</fullName>
                </value>
                <value>
                    <fullName>Claim Volume Less Than 20 – Not a Valid Submission</fullName>
                </value>
                <value>
                    <fullName>CPTT - CPM Error</fullName>
                </value>
                <value>
                    <fullName>CPTT - Other</fullName>
                </value>
                <value>
                    <fullName>CPTT - Settlement Redirect</fullName>
                </value>
                <value>
                    <fullName>Duplicate Project</fullName>
                </value>
                <value>
                    <fullName>Failure to Respond to Pend Inquiry</fullName>
                </value>
                <value>
                    <fullName>Impacted Claim Datafile Requires Additional Review</fullName>
                </value>
                <value>
                    <fullName>Not a Valid CRT Project</fullName>
                </value>
                <value>
                    <fullName>Per CPM Request</fullName>
                </value>
                <value>
                    <fullName>Provider/Customer/Submitter Education</fullName>
                </value>
                <value>
                    <fullName>System Has Not Been Updated</fullName>
                </value>
                <value>
                    <fullName>CPM Error</fullName>
                    <isActive>false</isActive>
                    <label>CPM Error</label>
                </value>
                <value>
                    <fullName>CPTT Return- not a CPM error</fullName>
                    <isActive>false</isActive>
                    <label>CPTT Return- not a CPM error</label>
                </value>
                <value>
                    <fullName>Claim Adjusted Prior to Project Start</fullName>
                    <isActive>false</isActive>
                    <label>Claim Adjusted Prior to Project Start</label>
                </value>
                <value>
                    <fullName>Invalid Portal Project</fullName>
                    <isActive>false</isActive>
                    <label>Invalid Portal Project</label>
                </value>
                <value>
                    <fullName>Less than 20 claims</fullName>
                    <isActive>false</isActive>
                    <label>Less than 20 claims</label>
                </value>
                <value>
                    <fullName>Less than 20 claims identified</fullName>
                    <isActive>false</isActive>
                    <label>Less than 20 claims identified</label>
                </value>
                <value>
                    <fullName>System Not Updated</fullName>
                    <isActive>false</isActive>
                    <label>System Not Updated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPTT_Release_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PICT Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPTT_Submission_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PICT - Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRT_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRT - Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRT_Estimated_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field will be populated for approved escalations only</inlineHelpText>
        <label>CRT - Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRT_Estimated_Date_for_Escalated_Items__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>It reflects the CRT Estimated completion date for escalated items.</inlineHelpText>
        <label>CRT Estimated Date for Escalated Items</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRT_Project_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRT Project ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRT_Submission_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CRT - Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_S_ADD_Claims__c</fullName>
        <label>C&amp;S ADD Claims</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_S_TPA_Claims__c</fullName>
        <label>C&amp;S TPA Claims</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Impact_status_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Impact status completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Project_Level__c</fullName>
        <label>Claim Project Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level One</fullName>
                    <default>true</default>
                    <label>Level One</label>
                </value>
                <value>
                    <fullName>Level Two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Code__c</fullName>
        <label>Closure Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Redirected - 039G SharePoint</fullName>
                </value>
                <value>
                    <fullName>Redirected – Contract Intent Dispute/Not System Administrable</fullName>
                </value>
                <value>
                    <fullName>Redirected – Less than 20</fullName>
                </value>
                <value>
                    <fullName>Redirected - Preferred Care Network</fullName>
                </value>
                <value>
                    <fullName>Redirected – National Project Team</fullName>
                </value>
                <value>
                    <fullName>Redirected – Settlement Oversight</fullName>
                </value>
                <value>
                    <fullName>Redirected – United Payment Integrity (ARO)</fullName>
                </value>
                <value>
                    <fullName>Resolved – C&amp;S Alert/ Proactive – Info Only</fullName>
                </value>
                <value>
                    <fullName>Resolved – C&amp;S Regulatory Rework NOT required</fullName>
                </value>
                <value>
                    <fullName>Resolved – Claim not in System – EDI Reject</fullName>
                </value>
                <value>
                    <fullName>Resolved – Claim Paid Correct</fullName>
                </value>
                <value>
                    <fullName>Resolved – Correct claim, invoice, med rec required</fullName>
                </value>
                <value>
                    <fullName>Resolved - Created in Error</fullName>
                </value>
                <value>
                    <fullName>Resolved – DOS Outside Reconsideration Time Frame</fullName>
                </value>
                <value>
                    <fullName>Resolved – Duplicate Referral</fullName>
                </value>
                <value>
                    <fullName>Resolved - FRSP Optum CMS PPS Pricing Tool Updates</fullName>
                </value>
                <value>
                    <fullName>Resolved - Member Benefit</fullName>
                </value>
                <value>
                    <fullName>Resolved – Misroute - Not Appropriate for Project</fullName>
                </value>
                <value>
                    <fullName>Resolved – Non Response, Provider</fullName>
                </value>
                <value>
                    <fullName>Resolved – Phycon, Platform not impacted</fullName>
                </value>
                <value>
                    <fullName>Resolved – Project Completed</fullName>
                </value>
                <value>
                    <fullName>Resolved – Proof of timely filing required</fullName>
                </value>
                <value>
                    <fullName>Resolved – Report Referral External Dept</fullName>
                </value>
                <value>
                    <fullName>Resolved – UHC West - NICE Network OPS</fullName>
                </value>
                <value>
                    <fullName>Resolved - UHC West - NICE New Day Claims</fullName>
                </value>
                <value>
                    <fullName>Resolved – Update had no claim impact</fullName>
                </value>
                <value>
                    <fullName>Resolved – Zero claims identified</fullName>
                </value>
                <value>
                    <fullName>Returned – Appeal Related</fullName>
                </value>
                <value>
                    <fullName>Returned – Check Related issue</fullName>
                </value>
                <value>
                    <fullName>Returned – CSP Customer Specific contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of the external contact that confirmed use of the email address.</inlineHelpText>
        <label>Email Confirmed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_CPM_Notified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date CPM Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Escalation_Reviewed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Escalation Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_description_of_issue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>describe the overall issue or what was wrong</inlineHelpText>
        <label>Detailed description of issue</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_I_Aged_Operpayments__c</fullName>
        <label>E&amp;I - Aged Overpayments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_I_Aged_Overpay_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name and title of the provider’s authorized representative that provided approval. Ensure the email documenting the approval is attached.</inlineHelpText>
        <label>E&amp;I - Aged Overpay Approval</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_I_CA_HIDR_Report_Updated__c</fullName>
        <label>E&amp;I CA HIDR - Report Updated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_I_CA_HIDR__c</fullName>
        <label>E&amp;I - CA HIDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_I_Single_Overpay_Letter_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name and title of the provider’s authorized representative that provided approval. Ensure the email documenting the approval is attached.</inlineHelpText>
        <label>E&amp;I - Single Overpay Letter Approval</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Confirmed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Input the date external project contact email addresses were confirmed for use.</inlineHelpText>
        <label>Email Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ending_Date_of_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ending Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Approved_By__c</fullName>
        <label>Escalation Approved By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amy Crabtree Williams</fullName>
                </value>
                <value>
                    <fullName>Joelle Campbell</fullName>
                </value>
                <value>
                    <fullName>Daniel De Leon II</fullName>
                </value>
                <value>
                    <fullName>Michele Flaherty</fullName>
                </value>
                <value>
                    <fullName>Andrea Florian</fullName>
                </value>
                <value>
                    <fullName>Kelley Harris</fullName>
                </value>
                <value>
                    <fullName>Mary Hemsworth</fullName>
                </value>
                <value>
                    <fullName>Denise Houseman</fullName>
                </value>
                <value>
                    <fullName>Jason McClellan</fullName>
                </value>
                <value>
                    <fullName>Rachel Pickett</fullName>
                </value>
                <value>
                    <fullName>Irene Reader</fullName>
                </value>
                <value>
                    <fullName>Mandy Sieglaff</fullName>
                </value>
                <value>
                    <fullName>Christy Ahmann</fullName>
                </value>
                <value>
                    <fullName>Christy Smith</fullName>
                    <isActive>false</isActive>
                    <label>Christy Smith</label>
                </value>
                <value>
                    <fullName>Frances Workman</fullName>
                    <isActive>false</isActive>
                    <label>Frances Workman</label>
                </value>
                <value>
                    <fullName>Jeanette Drake</fullName>
                    <isActive>false</isActive>
                    <label>Jeanette Drake</label>
                </value>
                <value>
                    <fullName>Reshaud Smith</fullName>
                    <isActive>false</isActive>
                    <label>Reshaud Smith</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Approved__c</fullName>
        <label>Escalation Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - escalated within CPM, CPTT, CRT</fullName>
                </value>
                <value>
                    <fullName>Yes - escalated with CPTT, CRT</fullName>
                </value>
                <value>
                    <fullName>Pending additional information</fullName>
                </value>
                <value>
                    <fullName>Yes – C&amp;S IA, LA, KSNF, TXNF</fullName>
                </value>
                <value>
                    <fullName>CPTT</fullName>
                    <isActive>false</isActive>
                    <label>CPTT</label>
                </value>
                <value>
                    <fullName>CRT</fullName>
                    <isActive>false</isActive>
                    <label>CRT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Submitter1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Submitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Submitter_Department__c</fullName>
        <label>Escalation Submitter Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ART</fullName>
                </value>
                <value>
                    <fullName>BCU</fullName>
                </value>
                <value>
                    <fullName>Claim Operations</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>CLM</fullName>
                </value>
                <value>
                    <fullName>FRSP</fullName>
                </value>
                <value>
                    <fullName>HealthPlan</fullName>
                </value>
                <value>
                    <fullName>HFA</fullName>
                </value>
                <value>
                    <fullName>Investigation &amp; Solutions Group</fullName>
                </value>
                <value>
                    <fullName>Investigation &amp; Solutions Group Passthru</fullName>
                </value>
                <value>
                    <fullName>Legal &amp; Regulatory</fullName>
                </value>
                <value>
                    <fullName>marketCARES</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Optum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PDAR</fullName>
                </value>
                <value>
                    <fullName>Physician Advocate</fullName>
                </value>
                <value>
                    <fullName>PNM</fullName>
                </value>
                <value>
                    <fullName>Provider Services Call</fullName>
                </value>
                <value>
                    <fullName>SWAT AR</fullName>
                </value>
                <value>
                    <fullName>PRISM</fullName>
                    <isActive>false</isActive>
                    <label>PRISM</label>
                </value>
                <value>
                    <fullName>PRISM Pass Thru</fullName>
                    <isActive>false</isActive>
                    <label>PRISM Pass Thru</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Submitter__c</fullName>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formal Complaint – Executive</fullName>
                </value>
                <value>
                    <fullName>Formal Complaint – DOI</fullName>
                </value>
                <value>
                    <fullName>Formal Complaint – State</fullName>
                </value>
                <value>
                    <fullName>Formal Complaint – CMS</fullName>
                </value>
                <value>
                    <fullName>Executive or Senior Leadership Directive</fullName>
                </value>
                <value>
                    <fullName>Provider Intent to Term Letter</fullName>
                </value>
                <value>
                    <fullName>Threatened termination for a Tier 1 Provider</fullName>
                </value>
                <value>
                    <fullName>Market Implosion</fullName>
                </value>
                <value>
                    <fullName>Media Threat</fullName>
                </value>
                <value>
                    <fullName>Financial Hardship</fullName>
                </value>
                <value>
                    <fullName>Provider refusing to treat members</fullName>
                </value>
                <value>
                    <fullName>CPM Leadership Exception</fullName>
                </value>
                <value>
                    <fullName>C&amp;S IA, LA, KSNF, TXNF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Seanior_Leader_If_Applicable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Executive/Senior Leader (If Applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Pend_Needed__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Extended Pend Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_Pend_Reason__c</fullName>
        <label>Extended Pend Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed or Corrected Exception</fullName>
                </value>
                <value>
                    <fullName>Contract or System update</fullName>
                </value>
                <value>
                    <fullName>Internal Business Partner Response</fullName>
                </value>
                <value>
                    <fullName>Missing Project Submission Details</fullName>
                </value>
                <value>
                    <fullName>Provider Response</fullName>
                </value>
                <value>
                    <fullName>Placeholder</fullName>
                    <isActive>false</isActive>
                    <label>Placeholder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_Pend_Resolve__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extended Pend Resolve</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Pend_Resolved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extended Pend Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Pend_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extended Pend Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the external email address that has been confirmed for use.</inlineHelpText>
        <label>External Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Claim_Volume__c</fullName>
        <description>Fully-Insured Claim Volume</description>
        <inlineHelpText>E&amp;I/Oxford Only</inlineHelpText>
        <label>Fully-Insured Claim Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <description>CPM Related Funding</description>
        <inlineHelpText>For E&amp;I only.</inlineHelpText>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_to_claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>what, if any, impact did the issue have on claims?  Is reprocessing required, and why</inlineHelpText>
        <label>Impact to claims</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Action_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the referral is Proactive, then Initial Action consists of one of the following: the date the report request is submitted, the date inquiry for additional information is made, or if determined that no project is required, the date resolved.</inlineHelpText>
        <label>Initial Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Action__c</fullName>
        <label>Initial Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extensive Root Cause Review</fullName>
                </value>
                <value>
                    <fullName>Information Requested</fullName>
                </value>
                <value>
                    <fullName>No Project Needed</fullName>
                </value>
                <value>
                    <fullName>ppoONE – Reviewing Report</fullName>
                </value>
                <value>
                    <fullName>Project Contact Notified</fullName>
                </value>
                <value>
                    <fullName>Report requested</fullName>
                </value>
                <value>
                    <fullName>Restricted Policy Spin-off</fullName>
                </value>
                <value>
                    <fullName>Root Cause Confirmed - Pending Galaxy Load</fullName>
                </value>
                <value>
                    <fullName>Spin Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Claim_Volume__c</fullName>
        <label>Initial Claim Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Project_Contact_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the referral was Provider Driven, then indicate the date initial contact was made with the project contact. Else, leave blank.</inlineHelpText>
        <label>Initial Project Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Determination_Notes__c</fullName>
        <description>Interest Determination Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Determination Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <description>Interest</description>
        <label>Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No - per CPM review</fullName>
                </value>
                <value>
                    <fullName>No - per Healthplan</fullName>
                </value>
                <value>
                    <fullName>No  - per SME review</fullName>
                </value>
                <value>
                    <fullName>Yes - per CPM review</fullName>
                </value>
                <value>
                    <fullName>Yes - per Healthplan</fullName>
                </value>
                <value>
                    <fullName>Yes - per SME review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>